--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.0.3",
     "install": "^0.13.0",
     "lucide-react": "^0.468.0",
